--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -19,13 +19,11 @@
 		}
 
 		form {
-			max-width: 600px;
+			max-width: 650px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
-			/* border: 1px solid #ddd;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+			
 		}
 
 		input[type="text"] {
@@ -38,15 +36,6 @@
 
 		}
 
-		#stmNumber {
-			background: #cbe3b5;
-			;
-
-		}
-
-		#revisionNumber {
-			background: #cbe3b5;
-		}
 
 		input[type="file"] {
 			width: 55%;
@@ -142,6 +131,24 @@
 			font-size: 18px;
 			font-weight: bold;
 		}
+		
+		
+		.stmNumber {
+       height: 15px;
+       background-color:#4d4d4d;
+       color: #fff;
+}
+.label-container #attachedPdf
+{
+    width:100px;
+    
+   
+}
+.label-container #attachedWord
+{
+    width:92px; 
+    
+}  
 	</style>
 </head>
 
@@ -171,45 +178,47 @@
 		<div class="label-container">
 			<label for="stmNumber">STM Number<br>(Quality inspection method_master <br>quality inspection
 				characteristics)</label>
-			<input type="text" id="stmNumber" th:field="${stm.stmNo}" readonly style="height: 15px;" />
+			<input type="text" id="stmNumber" class="stmNumber" th:field="${stm.stmNo}" readonly style="height: 15px;" />
 		</div>
 
 		<div class="label-container">
 			<label for="revisionNumber">Revision Number</label>
-			<input id="revisionNumber" type="text" style="height: 15px; width: 40px; margin-left: 25px;" th:field="${stm.stmVersion}" readonly /> Automatic renewal numbering
+			<input id="revisionNumber" class="stmNumber" type="text"style="height: 15px; width: 40px; margin-left: 0px; margin-top: -6px;" th:field="${stm.stmVersion}" readonly />   Automatic renewal numbering
 			
 		</div>
 
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent number)</label>
-			<input type="text" id="linkDestination" th:field="${stm.linkDestination}" disabled="disabled" />
+			<input type="text" id="linkDestination" class="stmNumber" th:field="${stm.linkDestination}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
-			<input type="text" id="textJapanese" th:field="${stm.textShortJP}" disabled="disabled" />
+			<input type="text" id="textJapanese" class="stmNumber" th:field="${stm.textShortJP}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
-			<input type="text" id="textEnglish" th:field="${stm.textShortEN}" disabled="disabled" />
+			<input type="text" id="textEnglish" class="stmNumber"th:field="${stm.textShortEN}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentPdf">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" id="attachedPdf" th:field="${stm.pdfFile}" disabled="disabled" maxlength="25" />
+				<input type="text" class="stmNumber" id="attachedPdf" th:field="${stm.pdfFile}" disabled="disabled" maxlength="25" />
+				<button type="button" style="background-color:red;border-radius:5px;" onclick="document.getElementById('attachmentPdf').click()">Choose PDF File</button>
 				<input type="file" id="attachmentPdf" name="pdfFile"
-					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" maxlength="25" />
+					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" maxlength="25" style="display: none;" />
 			</div>
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentWord">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" id="attachedWord" th:field="${stm.wordFile}" disabled="disabled" maxlength="25" />
+				<input type="text" class="stmNumber" id="attachedWord" th:field="${stm.wordFile}" disabled="disabled" maxlength="25" />
+				<button type="button" style="background-color:red;border-radius:5px;" onclick="document.getElementById('attachmentWord').click()">Choose Word File</button> 
 				<input type="file" id="attachmentWord" name="wordFile"
-					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" maxlength="25" />
+					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" maxlength="25" style="display: none;" />
 			</div>
 		</div>
 
@@ -246,22 +255,22 @@
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
-			<input type="text" id="oldStmNumber" th:field="${stm.oldSTMNumber}" disabled="disabled" />
+			<input type="text" id="oldStmNumber" class="stmNumber" th:field="${stm.oldSTMNumber}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="remarks1">Remarks 1</label>
-			<input id="remarks1" type="text" th:field="${stm.remarks1}" disabled="disabled" />
+			<input id="remarks1" type="text" class="stmNumber" th:field="${stm.remarks1}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="note2">Note 2</label>
-			<input type="text" id="note2" th:field="${stm.note2}" disabled="disabled" />
+			<input type="text" id="note2" class="stmNumber" th:field="${stm.note2}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="note3">Note 3</label>
-			<input type="text" id="note3" th:field="${stm.note3}" disabled="disabled" />
+			<input type="text" id="note3" class="stmNumber" th:field="${stm.note3}" disabled="disabled" />
 		</div>
 		<div style="margin-top: 20px;">
 			<button type="button" name="action" value="modify" class="registerclose"
@@ -387,6 +396,15 @@
                 input.value = formattedDate;
             }
         }
+		
+		
+		document.querySelector('label[for="attachmentPdf"]').addEventListener('click', function(e) {
+	        e.preventDefault();
+	    });
+	    
+	    document.querySelector('label[for="attachmentWord"]').addEventListener('click', function(e) {
+	        e.preventDefault();
+	    });
 
         // Add an event listener to the date input
         document.getElementById('lastUpdated').addEventListener('input', function () {
