--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -150,7 +150,7 @@
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label> <input type="text" id="textJapanese"
 				th:field="*{textShortJP}" maxlength="200"
-				 pattern="[\p{Script=Hiragana}\p{Script=Katakana}\p{Script=Han}\s]*"
+				 pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
                  title="Only Japanese characters are allowed">
 		</div>
 
