--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -35,7 +35,6 @@
 			margin: 5px 0;
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
-			font-weight: 700;
 		}
 		input[type="file"] {
 			width: 55%;
@@ -59,6 +58,10 @@
 <body th:onload="disEnableBtn([[${enableBtn}]])">
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+	<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
+    Logout
+    <i>&#10142;</i> 
+</a>
 	<h1>STM:Silicone Test Method</h1>
 	<p th:text="${message}"></p>
 	<p id="message" th:text="${error}"></p>
@@ -73,37 +76,37 @@
 		<div class="label-container">
 			<label for="stmNumber">STM Number<br>(Quality inspection
 				method_master <br>quality inspection characteristics)
-			</label> <input type="text" id="stmNumber" style="height: 10%;" disabled="disabled" th:value="${entValue.stmNo}"
+			</label> <input type="text" id="stmNumber" style="height: 10%;" disabled="disabled" th:value="${stmNo}"
 				oninput="updateDisabledField(this),updateFields()">
 		</div>
 
 		<div class="label-container">
 			<label for="Revision number">Revision number</label>
-			<input type="text" id="disabledField" disabled="disabled" th:value="${entValue.stmVersion}">
+			<input type="text" id="disabledField" disabled="disabled" th:value="${stmVer}">
 		</div>
 
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent
 				number)</label>
-			<input type="text" id="linkDestination" disabled="disabled" th:value="${entValue.linkDestination}">
+			<input type="text" id="linkDestination" disabled="disabled" th:value="${linkdest}">
 		</div>
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
-			<input type="text" id="textJapanese" disabled="disabled" th:value="${entValue.textShortJP}">
+			<input type="text" id="textJapanese" disabled="disabled" th:value="${jpText}">
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
-			<input type="text" id="textEnglish" disabled="disabled" th:value="${entValue.textShortEN}">
+			<input type="text" id="textEnglish" disabled="disabled" th:value="${enText}">
 		</div>
 
 		<div class="label-container">
 			<label for="pdfFileName">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" id="pdfFileName" disabled="disabled" th:value="${entValue.pdfFile}" name="pdfFileName"
+				<input type="text" id="pdfFileName" disabled="disabled" th:value="${pdf}" name="pdfFileName"
 					style="width: 37%;" />
-				<input type="hidden" id="pdfFileNameHid" th:value="${entValue.pdfFile}" name="pdfFileName">
+				<input type="hidden" id="pdfFileNameHid" th:value="${pdf}" name="pdfFileName">
 				<button type="button" class="download-button" onclick="downloadPDF()" id="pdfFileName"
 					style="margin-left: 6px;width: 38%;text-align: start" th:value="${pdf}">PdfDownload</button>
 			</div>
@@ -112,9 +115,9 @@
 		<div class="label-container">
 			<label for="docFileName">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" id="docFileName" disabled="disabled" th:value="${entValue.wordFile}" name="docFileName"
+				<input type="text" id="docFileName" disabled="disabled" th:value="${word}" name="docFileName"
 					style="width: 37%;" />
-				<input type="hidden" id="docFileNameHid" th:value="${entValue.wordFile}" name="docFileName">
+				<input type="hidden" id="docFileNameHid" th:value="${word}" name="docFileName">
 				<button type="button" class="download-button" onclick="downloadDocument()" id="docFileName"
 					style="margin-left: 6px;width: 38%;" th:value="${word}">DocDownload</button>
 			</div>
@@ -138,32 +141,32 @@
 
 		<div class="label-container">
 			<label for="lastUpdated">Last Updated (Drafting Date)</label>
-			<input type="text" id="lastUpdated" disabled="disabled" th:value="${entValue.draftingDate}" pattern="yyy/MM/dd">
+			<input type="text" id="lastUpdated" disabled="disabled" th:value="${draftingdate}" pattern="yyy/MM/dd">
 		</div>
 
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
-			<input type="text" id="finalDrafter" disabled="disabled" th:value="${entValue.finalDrafterName}">
+			<input type="text" id="finalDrafter" disabled="disabled" th:value="${lastName}">
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
-			<input type="text" id="oldStmNumber" disabled="disabled" th:value="${entValue.oldSTMNumber}">
+			<input type="text" id="oldStmNumber" disabled="disabled" th:value="${oldSTMNo}">
 		</div>
 
 		<div class="label-container">
 			<label for="remarks1">Remarks 1</label>
-			<input id="remarks1" type="text" disabled="disabled" th:value="${entValue.remarks1}">
+			<input id="remarks1" type="text" disabled="disabled" th:value="${remarks}">
 		</div>
 
 		<div class="label-container">
 			<label for="note2">Note 2</label>
-			<input type="text" id="note2" disabled="disabled" th:value="${entValue.note2}">
+			<input type="text" id="note2" disabled="disabled" th:value="${note2}">
 		</div>
 
 		<div class="label-container">
 			<label for="note3">Note 3</label>
-			<input type="text" id="note3" disabled="disabled" th:value="${entValue.note3}">
+			<input type="text" id="note3" disabled="disabled" th:value="${note3}">
 		</div>
 
 		<div style="margin-top: 20px;">
