--- a/src/main/resources/templates/UserDashBoard.html
+++ b/src/main/resources/templates/UserDashBoard.html
@@ -6,6 +6,10 @@
 <body id="dashboardBody">
 <input type= "hidden" id = "ssoid" name="ssoid" th:value = "${ssoid}"/>
 <h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
+    Logout
+    <i>&#10142;</i> 
+</a>
          <h1>STM:Silicone Test Method</h1>
     <div class="dashboard">
         <a href="#" class="dashboard-button disabled-link" th:href="@{/register}" style="margin-top:30px;"><span>&#9733;</span>New Registration</a>
