--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -6,9 +6,9 @@
 }
 
 #adminMessage {
-	position: absolute;
+	position: fixed;
 	top: 10px;
-	right: 10px;
+	right: 130px;
 	color: #062d73;
 	font-size: 18px;
 	font-weight: bold;
@@ -283,4 +283,25 @@ tr.tableHover {
 	color: red;
 }
 
+.logout-button {
+
+            display: block;
+            width: 80px;
+            padding: 10px;
+            margin: 5px 0;
+            background-color: #000066;
+            color: #fff;
+            text-decoration: none;
+            text-align: center;
+            border: 3px solid rgb(64, 0, 0);
+            border-radius: 10px;
+            position: fixed;
+            top: 10px;
+            right: 10px;
+        }
+
+        /* Style for the arrow inside the button */
+        .logout-button i {
+            margin-left: 5px; 
+        }
 /*ADD[E] Samata*/
